# card-collection-manager

./: .gitignore  Cargo.toml  README.MD  build.ps1
cardlists/: get_json.md  get_series.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  CardList.tsx  InputWithClearButton.tsx  SeriesFilter.tsx  ToggleButtonsGroup.tsx  index.css  main.tsx
frontend/src/services/: cards.ts
src/: api.rs  card.rs  cardtype.rs  cli.rs  copy.rs  db.rs  dberror.rs  jsoncards.rs  lib.rs  load_json.rs  main.rs  rarity.rs  series.rs
src/cards/: get_json.md
src/routes/: .rest  api.rs  cards.rs  mod.rs  series.rs
tests/: db_tests.rs
