[package]
name = "card-collection-manager"
version = "0.1.0"
edition = "2024"
default-run = "card-collection-manager"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
copypasta = "0.10.2"
open = "5.3.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }

